# hw_web-scraping

./: .gitignore  README.md  main.py  pyproject.toml  scraper.py
